# micro-adk-framework

./: .env.example  .gitignore  Dockerfile  Dockerfile.router  README.md  docker-compose.yaml  pyproject.toml
agents/assistant/: agent.yaml
config/: config.yaml
docs/: ADD_AGENT.md  ADD_TOOL.md  ARCHITECTURE.md  CHALLENGES.md
examples/: README.md
examples/claude_assistant/: agent.yaml
examples/gpt_assistant/: agent.yaml
examples/math_tutor/: agent.yaml
examples/weather_bot/: agent.yaml
examples/writing_assistant/: agent.yaml
migrations/: init.sql
samples/: __init__.py
samples/tools/calculator/: Dockerfile  main.py
samples/tools/text_utils/: Dockerfile  main.py
samples/tools/weather/: Dockerfile  main.py
src/micro_adk/: __init__.py  cli.py
src/micro_adk/core/: __init__.py  config.py  container_tool.py  postgres_session_service.py  tool_invocation_logger.py  tool_registry.py
src/micro_adk/orchestrator/: __init__.py  autoscaler.py  deployment_manager.py  kubernetes_orchestrator.py
src/micro_adk/router/: __init__.py  service_discovery.py  tool_router.py
src/micro_adk/router_service/: __init__.py  main.py
src/micro_adk/runtime/: __init__.py
src/micro_adk/runtime/api/: __init__.py  main.py  schemas.py
src/micro_adk/runtime/services/: __init__.py  agent_loader.py  runner_factory.py
tools/: manifest.yaml
